Aggiornamento: aggiunto endpoint per funzionalità di ping e ticker price ultime 24h + ottimizzazioni namespace

--- a/BinanceTradingSimulator/Views/TradingSimulator/BinancePingAPI.cshtml
+++ b/BinanceTradingSimulator/Views/TradingSimulator/BinancePingAPI.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BinanceAPI.Models
 @model bool
 @{
-    ViewBag.Title = "TestnetView";
+    ViewBag.Title = "BinancePingAPI";
 }
 
 <h2>@Model</h2>
