Aggiornamento minore: aggiunti link al menù per ping e ticker

--- a/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
+++ b/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Transazioni", "ShowTransactions", "TradingSimulator")</li>
                     <li>@Html.ActionLink("Testnet", "PlaceTestnetOrder", "TradingSimulator")</li>
-
+                    <li>@Html.ActionLink("PingAPI", "BinancePingAPI", "TradingSimulator")</li>
+                    <li>@Html.ActionLink("Ticker Price", "TickerPrice24hr", "TradingSimulator")</li>
                 </ul>
             </div>
         </div>
