Aggiornamento: aggiunto metodo che mostra i valori di candela

--- a/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
+++ b/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Testnet", "PlaceTestnetOrder", "TradingSimulator")</li>
                     <li>@Html.ActionLink("PingAPI", "BinancePingAPI", "TradingSimulator")</li>
                     <li>@Html.ActionLink("Ticker Price", "TickerPrice24hr", "TradingSimulator")</li>
+                    <li>@Html.ActionLink("Prezzi candlestick", "KlinesValues", "TradingSimulator")</li>
+
                 </ul>
             </div>
         </div>
