Aggiornamento: ottimizzazione codice + metodo per eseguire un ordine

--- a/BinanceTradingSimulator/Views/TradingSimulator/PlaceTestnetOrder.cshtml
+++ b/BinanceTradingSimulator/Views/TradingSimulator/PlaceTestnetOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BinanceAPI.Models
 @model bool
 @{
-    ViewBag.Title = "TestnetView";
+    ViewBag.Title = "PlaceTestnetOrder";
 }
 
 <h2>@Model</h2>
