--- a/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
+++ b/BinanceTradingSimulator/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Transazioni", "ShowTransactions", "TradingSimulator")</li>
-                    <li>@Html.ActionLink("Testnet", "PlaceTestnetOrder", "TradingSimulator")</li>
+                    <li>@Html.ActionLink("Ordine", "PlaceOrder", "TradingSimulator")</li>
+                    <li>@Html.ActionLink("Ordine Testnet", "PlaceTestnetOrder", "TradingSimulator")</li>
                     <li>@Html.ActionLink("PingAPI", "BinancePingAPI", "TradingSimulator")</li>
                     <li>@Html.ActionLink("Ticker Price", "TickerPrice24hr", "TradingSimulator")</li>
                     <li>@Html.ActionLink("Prezzi candlestick", "KlinesValues", "TradingSimulator")</li>
